[project]
name = "budget-dataflow"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "flask>=3.1.3",
    "flask-limiter>=4.1.1",
    "google-auth>=2.55.1",
    "gspread>=6.2.1",
    "gunicorn>=26.0.0",
    "pytest>=9.1.1",
    "python-dotenv>=1.2.2",
]
